fix contrast errors in the footer

--- a/styles/place.css
+++ b/styles/place.css
@@ -91,7 +91,3 @@ footer {
     color: var(--font-secondary-color);
     padding: 1rem;
 }
-
-#lastmodified {
-    color: var(--secondary-color);
-}
